fix: adjust summary content styling for better alignment and spacing

--- a/src/styles/_setup.scss
+++ b/src/styles/_setup.scss
@@ -78,8 +78,11 @@
 .setup-screen__summary-content {
   display: flex;
   align-items: center;
+  justify-content: flex-end;
   background-color: #f6f6f6;
   font-family: "almarai", sans-serif;
+  padding: 0em 1em 0em 0em;
+  min-width: 29rem;
 }
 
 .setup-option {
@@ -162,6 +165,7 @@
   align-items: center;
   padding: 1em;
   background-color: #f6f6f6;
+  white-space: nowrap;
 }
 
 .setup-screen__decoration-icon {
